# audio-metrics-cli

./: .gitignore  CLEANUP_COMPLETE.md  DEPARTMENT_MEETING_FULL_TEST_REPORT.md  HOW_TO_PUBLISH.md  LOCAL_MODELS_VERIFIED.md  MEETING_AUDIO_TEST_RESULTS.md  MULTI_SCENARIO_TEST_REPORT.md  MULTI_SPEAKER_GUIDE.md  OFFLINE_MODEL_TEST_REPORT.md  PROJECT_SUMMARY_2026-03-10.md  QUICK_REFERENCE.md  README.md  REFACTOR_SUMMARY.md  TEST_REPORT_PYANNOTATE.md  TOKEN_SETUP.md  UPGRADE_SUMMARY.md  VOICE_ACOUSTIC_ANALYZER.md  analyze_accurate.py  analyze_basic.py  analyze_batch_202407.py  analyze_reading_deep.py  analyze_reading_pack.py  analyze_simple.py  analyze_simple_v2.py  architecture_export.md  cleanup.bat  comprehensive_audio_test.py  download_models.bat  meeting_sample_60s.m4a  pyproject.toml  release.sh  requirements.txt  run_full_test.py  sales_sample_60s.m4a  test_model_offline.py  test_scenarios.py  test_vad_load.py  upload-to-pypi.bat
.github/workflows/: release.yml
docs/: CLI_REDESIGN.md  DESIGN_DECISIONS.md  DIARIZATION_DESIGN.md  MODEL_DEPENDENCIES.md  MODEL_QUICK_REFERENCE.md  PYANNOTATE_ALTERNATIVES.md  README.md  RELEASE.md  SUMMARY_API_CONFIG.md  USAGE_EXAMPLES.md  architecture_v3.md
src/audio_metrics/: __init__.py  cli.py  cli_enhanced.py
src/audio_metrics/api/: __init__.py  main.py
src/audio_metrics/cli/: cli.py
src/audio_metrics/conversation/: __init__.py  conversation_dynamics.py
src/audio_metrics/core/: __init__.py  config.py  logger.py  model_config.py  model_manager.py  pipeline.py
src/audio_metrics/exporters/: __init__.py  csv_exporter.py  enhanced_json_exporter.py  html_exporter.py
src/audio_metrics/modules/: __init__.py  audio_loader.py  emotion_analyzer.py  filler_detector.py  json_exporter.py  keyword_extractor.py  metrics_builder.py  prosody_analyzer.py  segment_metrics.py  speaker_diarization.py  speaker_metrics.py  speech_to_text.py  summary_generator.py  timeline_builder.py  timing_relation.py  vad_analyzer.py
src/audio_metrics/nlp/: __init__.py
